--- a/app/views/perfumes/show.html.haml
+++ b/app/views/perfumes/show.html.haml
@@ -1,5 +1,5 @@
 %h1= "#{@perfume.title}, #{@perfume.year}"
-.perfume-container
+.container
   .perfume
     .layers
       - @perfume.layer_types.each do |layer_type|
@@ -7,7 +7,8 @@
         .layer{id: name}
           %h4= name.capitalize
           .notes
-          - @perfume.send("#{name}_notes_names").each do |note|
-            %span.note= note
+          - @perfume.send("#{name}_notes").each do |note|
+            %span.note= link_to note.name, note_path(note.id)
 
-  = link_to 'Perfumes', perfumes_path
+  = link_to 'All Perfumes', perfumes_path
+  = link_to 'All Notes', notes_path
