split views into partials

--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -1,12 +1,6 @@
 %h1= "Perfumes by Notes"
 .container
   .notes
-  - @notes.each do |note|
-    .note{id: note.id}
-      .name= link_to note.name, note_path(note.id)
-      .perfumes
-        .div= 'Present in Perfumes: '
-      - note.perfumes.each do |perfume|
-        .name= link_to perfume.name, perfume_path(perfume.id)
+  = render @notes
   = link_to 'All Perfumes', perfumes_path
   = link_to 'All Notes', notes_path
