--- a/app/assets/stylesheets/perfumes.scss
+++ b/app/assets/stylesheets/perfumes.scss
@@ -45,12 +45,12 @@
 }
 
 span.note {
-  background: #FFFAF0;
-  padding: 5px;
+  background: ivory;
+  padding: 10px;
   margin: 5px;
   border-style: solid;
-  border-color: #CDC5BF;
+  border-color: thistle;
   border-radius: 5px;
-  border-width: 1px;
+  border-width: 3px;
   position: relative;
 }
