--- a/app/assets/stylesheets/perfumes.scss
+++ b/app/assets/stylesheets/perfumes.scss
@@ -4,9 +4,8 @@
 
 .perfume, .note {
   border-style: solid;
-  border-color: honeydew;
-//  background: rgba(255,255,255,0.8);
-  background: ghostwhite;
+  border-color: #FFE1FF;
+  background-color: white;
   padding: 15px;
   margin-bottom: 20px;
   border-radius: 10px;
