Restructure javascripts * Include application.js only to perfume views * Slight code reorganization and renaming

--- a/app/views/perfumes/show.html.haml
+++ b/app/views/perfumes/show.html.haml
@@ -13,3 +13,5 @@
 
   = link_to 'All Perfumes', perfumes_path
   = link_to 'All Notes', notes_path
+
+= javascript_include_tag 'application', 'data-turbolinks-track' => true
