--- a/app/views/notes/_note.html.haml
+++ b/app/views/notes/_note.html.haml
@@ -1,5 +1,7 @@
-.note
-  .name= link_to note.name, note_path(note.id)
-  .perfumes= 'Present in Perfumes: '
+.notes__note
+  %p
+    = link_to note.name, note_path(note.id)
+    = 'is present in the following perfumes:'
   - note.perfumes.each do |perfume|
-    .perfume= link_to perfume.title, perfume_path(perfume.id)
+    - @perfume = perfume
+    = render 'perfume', object: @perfume
