--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -1,6 +1,3 @@
-%h1= "Perfumes by Notes"
-.container
-  .notes
+%h1= "Notes index"
+.notes
   = render @notes
-  = link_to 'All Perfumes', perfumes_path
-  = link_to 'All Notes', notes_path
