Polishing views and link CSS

--- a/app/views/notes/_note.html.haml
+++ b/app/views/notes/_note.html.haml
@@ -1,6 +1,6 @@
 .notes__note
   %p
-    = link_to note.name, note_path(note.id)
+    = link_to "\'#{note.name}\'", note_path(note.id)
     = 'is present in the following perfumes:'
   - note.perfumes.each do |perfume|
     - @perfume = perfume
