--- a/app/views/perfumes/show.html.haml
+++ b/app/views/perfumes/show.html.haml
@@ -1,4 +1,4 @@
-%h1= "#{@perfume.name}  perfume"
+%h1= "#{@perfume.name} ~ perfume"
 .perfumes
   .perfumes__perfume[@perfume]
     .perfume__loveit!= '&#9825;'
