--- a/app/assets/stylesheets/perfumes_and_notes.scss
+++ b/app/assets/stylesheets/perfumes_and_notes.scss
@@ -30,5 +30,5 @@
 }
 
 .layer__notes__note:hover, .note__perfumes__perfume:hover {
-    border-color: deeppink;
+  text-shadow: 0px 0px 1px deeppink;
 }
