--- a/app/views/application/_footer.html.haml
+++ b/app/views/application/_footer.html.haml
@@ -5,4 +5,5 @@
       != '&lowast;'
       = link_to 'Notes', notes_path
     .footer__right
-      = link_to 'Github', 'https://github.com/matildasmeds/perfume_forest'
+      - readme_url = 'https://github.com/matildasmeds/perfume_forest/blob/master/README.rdoc'
+      = link_to 'Github', readme_url
